// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render successfully when disabled 1`] = `
<button
  class="jsx-1787608142 button button__disabled button__medium"
  disabled=""
>
  <span
    class="elm-0-2-1 elm-d3-0-2-5"
    data-testid="text-elm"
  >
    Hello Test
  </span>
</button>
`;

exports[`Button should render successfully when lightness is high 1`] = `
<button
  class="jsx-1658600500 button button__high"
>
  <span
    class="elm-0-2-1 elm-d5-0-2-7"
    data-testid="text-elm"
  >
    Hello Test
  </span>
</button>
`;

exports[`Button should render successfully when lightness is low 1`] = `
<button
  class="jsx-1850165365 button button__medium"
>
  <span
    class="elm-0-2-1 elm-d4-0-2-6"
    data-testid="text-elm"
  >
    Hello Test
  </span>
</button>
`;

exports[`Button should render successfully with high emphasis 1`] = `
<button
  class="jsx-1787608142 button button__high"
>
  <span
    class="elm-0-2-1 elm-d2-0-2-4"
    data-testid="text-elm"
  >
    Hello Test
  </span>
</button>
`;

exports[`Button should render successfully with icon 1`] = `
<button
  class="jsx-1787608142 button button__medium"
>
  <span
    class="jsx-2439414882 icon material-icons icon"
  >
    access_time
  </span>
  <span
    class="elm-0-2-1 elm-d6-0-2-8"
    data-testid="text-elm"
  >
    Hello Test
  </span>
</button>
`;

exports[`Button should render successfully with low emphasis 1`] = `
<button
  class="jsx-1787608142 button button__low"
>
  <span
    class="elm-0-2-1 elm-d0-0-2-2"
    data-testid="text-elm"
  >
    Hello Test
  </span>
</button>
`;

exports[`Button should render successfully with medium emphasis 1`] = `
<button
  class="jsx-1787608142 button button__medium"
>
  <span
    class="elm-0-2-1 elm-d1-0-2-3"
    data-testid="text-elm"
  >
    Hello Test
  </span>
</button>
`;
